--- a/force-app/main/default/classes/FeatureFlagPluginTest.cls
+++ b/force-app/main/default/classes/FeatureFlagPluginTest.cls
@@ -1,30 +1,40 @@
 @IsTest
 public with sharing class FeatureFlagPluginTest {
-    @IsTest
-    static void getFlag(){
-        Feature_Flag__c flag = FeatureToggleTest.createFlag('Test',true);
-
-        FeatureFlagPlugin.Requests req = new FeatureFlagPlugin.Requests();
-        req.name = 'Test';
-
-        Test.startTest();
-        List<FeatureFlagPlugin.Results> res = FeatureFlagPlugin.checkFlags(new List<FeatureFlagPlugin.Requests> {req});
-        Test.stopTest();
-
-        System.assertEquals(1, res.size());
-        System.assert (res[0].active, 'Feature was not active');
+    private static User getRunAsUser() {
+        return [SELECT Id FROM User WHERE Id = :UserInfo.getUserId()];
     }
 
     @IsTest
-    static void getFlag_missingRecord_expectActiveDuringTests(){
-        FeatureFlagPlugin.Requests req = new FeatureFlagPlugin.Requests();
-        req.name = 'Missing Flag';
+    static void getFlag(){
+        User runAsUser = getRunAsUser();
+        System.runAs(runAsUser) {
+            Feature_Flag__c flag = FeatureToggleTest.createFlag('Test', true);
 
-        Test.startTest();
-        List<FeatureFlagPlugin.Results> res = FeatureFlagPlugin.checkFlags(new List<FeatureFlagPlugin.Requests> {req});
-        Test.stopTest();
+            FeatureFlagPlugin.Requests req = new FeatureFlagPlugin.Requests();
+            req.name = 'Test';
 
-        System.assertEquals(1, res.size());
-        System.assert(res[0].active, 'Expected missing flag to be active during tests.');
+            Test.startTest();
+            List<FeatureFlagPlugin.Results> res = FeatureFlagPlugin.checkFlags(new List<FeatureFlagPlugin.Requests> {req});
+            Test.stopTest();
+
+            System.assertEquals(1, res.size());
+            System.assert(res[0].active, 'Feature was not active');
+        }
+    }
+
+    @IsTest
+    static void getFlagMissingRecordExpectActiveDuringTests(){
+        User runAsUser = getRunAsUser();
+        System.runAs(runAsUser) {
+            FeatureFlagPlugin.Requests req = new FeatureFlagPlugin.Requests();
+            req.name = 'Missing Flag';
+
+            Test.startTest();
+            List<FeatureFlagPlugin.Results> res = FeatureFlagPlugin.checkFlags(new List<FeatureFlagPlugin.Requests> {req});
+            Test.stopTest();
+
+            System.assertEquals(1, res.size());
+            System.assert(res[0].active, 'Expected missing flag to be active during tests.');
+        }
     }
 }
